--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
   </header>
   <main>
-    <div class="introduction py-160">
+    <section class="introduction py-160">
       <div class="container flex justify-between">
         <div class="w-2/5">
           <h2 class="text-2xl mb-36">Introduction</h2>
@@ -39,13 +39,13 @@
           <img src="./images/2023week2/sparkle-sm.png" alt="sparkle">
         </div>
         <ul class="flex">
-          <li><img src="./images/2023week2/sparkle.png" alt="sparkle" class="mr-24"></li>
-          <li><img src="./images/2023week2/photographer.png" alt="photographer" class="mr-24"></li>
+          <li class="mr-24"><img src="./images/2023week2/sparkle.png" alt="sparkle"></li>
+          <li class="mr-24"><img src="./images/2023week2/photographer.png" alt="photographer"></li>
           <li><img src="./images/2023week2/people-2.png" alt="people"></li>
         </ul>
       </div>
-    </div>
-    <div class="bg-white text-secondary py-160">
+    </section>
+    <section class="bg-white text-secondary py-160">
       <div class="container flex justify-between item-center">
         <ul class="w-1/2 flex flex-wrap gap-24">
           <li class="w-48 border-1 border-info drop-shadow p-16">
@@ -74,8 +74,8 @@
           <p class="text-xl">With over 5 years of experience, I'm proficient in HTML, CSS, JavaScript, jQuery, and React. I have a strong understanding of user experience design and accessibility. I'm always learning new technologies and techniques to stay up-to-date in the field.</p>
         </div>
       </div>
-    </div>
-    <div class="contact py-96">
+    </section>
+    <section class="contact py-96">
       <div class="container flex justify-between item-center">
         <div class="flex">
           <h2 class="text-2xl mr-16">CONTACT ME</h2>
@@ -87,8 +87,8 @@
           <li><a href="#"><img src="./images/2023week2/message.png" alt="message" width="162"></a></li>
         </ul>
       </div>
-    </div>
-    <div class="bg-white text-black py-160">
+    </section>
+    <section class="bg-white text-black py-160">
       <div class="container">
         <h2 class="w-4/5 text-right text-2xl mb-16">My Projects</h2>
         <ul class="grid grid-flow-col gap-24 gap-y-28">
@@ -104,7 +104,7 @@
           <li class="row-span-2 col-span-2"><img src="./images/2023week2/Rectangle 29.png" alt="project"></li>
         </ul>
       </div>
-    </div>
+    </section>
   </main>
   <footer class="py-40">
     <h4 class="text-center">all rights reserved @hexschool2023</h4>
